# refereesim

./: INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  run_refereesim.py
refereesim/: __init__.py  cli.py  models.py
refereesim/generators/: __init__.py  paper_generator.py
refereesim/reviewers/: __init__.py  ai_reviewer.py
refereesim/scorers/: __init__.py  evaluator.py
refereesim/seeders/: __init__.py  error_seeder.py
refereesim/utils/: __init__.py  reporter.py
results/refereesim_20250910_181243/cache/: paper_001_command-r_standard.json  paper_002_command-a-03-2025_standard.json  paper_002_command-r_standard.json  paper_002_gemini-2.5-flash_standard.json  paper_002_gemini-2.5-pro_standard.json
results/refereesim_20250910_181243/data/: paper_001.md  paper_001_metadata.json  paper_002.md  paper_002_metadata.json  paper_003.md  paper_003_metadata.json  paper_004.md  paper_004_metadata.json  paper_005.md  paper_005_metadata.json  paper_006.md  paper_006_metadata.json  paper_007.md  paper_007_metadata.json  paper_008.md  paper_008_metadata.json  paper_009.md  paper_009_metadata.json  paper_010.md  paper_010_metadata.json  paper_011.md  paper_011_metadata.json  paper_012.md  paper_012_metadata.json  paper_013.md  paper_013_metadata.json  paper_014.md  paper_014_metadata.json  paper_015.md  paper_015_metadata.json
results/refereesim_20250910_181243/reviews/: paper_001_command-a-03-2025_standard.json  paper_001_deepseek-ai_DeepSeek-R1-0528_standard.json  paper_001_deepseek-ai_DeepSeek-R1_standard.json  paper_001_deepseek-ai_DeepSeek-V3_standard.json  (+6 more)
