[project]
name = "refereesim"
version = "0.1.0"
description = "RefereeSim: AI Reviewer Evaluation Platform for Scientific Paper Error Detection"
authors = [
    {name = "AI Agent", email = "ai@refereesim.org"}
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0"
]

[project.scripts]
refereesim = "refereesim.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"